# software-challenge-2022

./: .gitignore  CMakeLists.txt  Dockerfile  build.sh  docker.sh
src/: alphabeta.cpp  alphabeta.hpp  evaluation.cpp  evaluation.hpp  gamestate.cpp  gamestate.hpp  main.cpp  network.cpp  network.hpp  parser.cpp  parser.hpp  transpositiontable.cpp  transpositiontable.hpp  types.hpp
utils/: bench.cpp  converter.py  crosstest.cpp  elotest.cpp  helper.hpp  perft.cpp  test-with-server.py  test.cpp  threadpool.hpp  tostring.hpp  tune.cpp
utils/players/: base.hpp  engine.hpp  material.hpp  mauer.hpp  minimus.hpp  queren.hpp  random.hpp
